syntax = "proto3";

package configs;

import "validate/validate.proto";
import "gogo/gogo.proto";

option go_package = ".;configs";

message Config {
  string mode = 1 [
    (validate.rules).string = {in:["debug", "normal"]},
    (gogoproto.jsontag) = "mode"
  ];
  string grpc_addr = 2 [
    (validate.rules).string = {min_len:3},
    (gogoproto.jsontag) = "grpc_addr"
  ];
  string http_addr = 3 [
    (validate.rules).string = {min_len:3},
    (gogoproto.jsontag) = "http_addr"
  ];
  string pprof_addr = 4 [
    (validate.rules).string = {min_len:3},
    (gogoproto.jsontag) = "pprof_addr"
  ];
  string apm_url = 5 [
    (gogoproto.jsontag) = "apm_url"
  ];
  string mysql_conf = 6 [
    (gogoproto.jsontag) = "mysql_conf"
  ];
}
